do a bunch of todos

--- a/sigma.tex
+++ b/sigma.tex
@@ -283,7 +283,8 @@ where the scheme ``$\SDiv_0 \CP^\infty_E$'' of \textit{special divisors} is defi
 If it exists, let $C_2 \G$ denote the symmetric square of $\Div_0 \G$, thought of as a module over the ring scheme $\Div \G$.  This scheme has the property that a formal group homomorphism $\phi\co C_2 \G \to H$ is equivalent data to a symmetric function $\psi\co \G \times \G \to H$ satisfying a rigidity condition ($\psi(x, 0) = 0$) and a $2$--cocycle condition as in \Cref{TwoCocycleConditionForBSUBundles}.
 \end{definition}
 
-\begin{theorem}[{Ando--Hopkins--Strickland, unpublished}]\label{SDivModelsC2}\citeme{This is Prop 3.2 of the AHS preprint or Prop 2.13 of Strickland's FSKS preprint}
+\begin{theorem}[{Ando--Hopkins--Strickland, unpublished}]\label{SDivModelsC2}
+%\citeme{This is Prop 3.2 of the AHS preprint or Prop 2.13 of Strickland's FSKS preprint}
 $\SDiv_0 \G$ is a model for $C_2 \G$.
 \end{theorem}
 \begin{proof}[Proof sketch]
@@ -338,7 +339,6 @@ and then use the universal property in \Cref{DefinitionOfC2G}.
 
 In order to lift this analysis to $\Spec E_0 MSU$, we again appeal to the torsor structure.  At this point, it will finally be useful to introduce some notation:
 \begin{definition}[{\cite[Definition 2.39]{AHSTheoremOfTheCube}}]
-\todo{You could motivate these using Cartier duality.}
 For a sheaf $\sheaf L$ over a formal group $\G$, we introduce the schemes
 \begin{align*}
 C^0(\G_E; \L)(T) & = \{\text{triv\textsuperscript{ns} of $u^* \L \downarrow u^* \G$}\} , \\
@@ -348,12 +348,14 @@ C^2(\G_E; \L)(T) & = \left\{\begin{array}{c}\text{triv\textsuperscript{ns} of $u
 \end{definition}
 
 \noindent Thus far, we have established the following isomorphisms:
-\todo{You could include the cohomological schemes.}
 \begin{align*}
+(\Z \times BU)_E & \cong C_0 \CP^\infty_E, &
 \Spec E_0(\Z \times BU) & \cong C^0(\CP^\infty_E; \Gm), &
 \Spec E_0(MUP) & \cong C^0(\CP^\infty_E; \sheaf I(0)), \\
+BU_E & \cong C_1 \CP^\infty_E, &
 \Spec E_0(BU) & \cong C^1(\CP^\infty_E; \Gm), &
 \Spec E_0(MU) & \cong C^1(\CP^\infty_E; \sheaf I(0)), \\
+BSU_E & \cong C_2 \CP^\infty_E, &
 \Spec E_0(BSU) & \cong C^2(\CP^\infty_E; \Gm),
 \end{align*}
 where we have abusively abbreviated the sheaf of functions on $\CP^\infty_E$ to $\Gm$.
@@ -420,8 +422,7 @@ The published proofs of Ando, Hopkins, and Strickland differ substantially from 
 \end{remark}
 
 \begin{remark}
-\todo{Should this go earlier?  Also, maybe mention the analogy with $\Susp^2 kU \wedge_{kU} \Susp^2 kU \simeq \Susp^4 kU$.}
-The scheme $C_2 \G$ might also be written as \[C_2 \G = \Sym^2_{\Div \G} \Div_0 \G,\] where we are thinking of of $\Div_0 \G \subseteq \Div \G$ as the augmentation ideal inside of an augmented ring.
+Our definition of the scheme $C_2 \G$ was by the formula \[C_2 \G = \Sym^2_{\Div \G} \Div_0 \G,\] where we are thinking of of $\Div_0 \G \subseteq \Div \G$ as the augmentation ideal inside of an augmented ring.  The formal schemes $\Div \G$ and $\Div_0 \G$ are the formal schemes associated by $E$--theory to the infinite loopspaces underlying $kU$ and $\Susp^2 kU$ respectively.  Remarking that $BSU$ is the infinite loopspace underlying $\Susp^4 kU$, we arrive at the analogous topological formula \[\Susp^4 kU = (\Susp^2 kU) \sm_{kU} (\Susp^2 kU).\]
 \end{remark}
 
 
@@ -445,10 +446,10 @@ The scheme $C_2 \G$ might also be written as \[C_2 \G = \Sym^2_{\Div \G} \Div_0 
 
 We now embark on an analysis of $MU[6, \infty)$--orientations in earnest.  As in the case of $MSU$, it is fruitful to first study the behavior of vector bundles with structure map lifted through $\OS{kU}{6} = BU[6, \infty)$ and to analyze the schemes $BU[6, \infty)_E$ and $\Spec E_0 BU[6, \infty)$.  In the previous case, we studied a particular bundle \[\Pi_2\co \CP^\infty \times \CP^\infty \xrightarrow{(1 - \L_1)(1 - \L_2)} BSU,\] which controlled much of the geometry through our splitting principle for $BSU$--bundles, recorded as \Cref{SplittingPrincipleForBSU}.  Analogously, we can construct a naturally occurring such bundle as the product \[\Pi_3\co \CP^\infty \times \CP^\infty \times \CP^\infty \xrightarrow{(1 - \L_1)(1 - \L_2)(1 - \L_3)} BU[6, \infty),\] but the proof of \Cref{SplittingPrincipleForBSU} falls apart almost immediately---there does not appear to be a splitting principle for bundles lifted through $BU[6, \infty)$.  This is quite worrying, and it dampens our optimism across the board: about the behavior of $\Pi_3$ exerting enough control over $BU[6, \infty)$, about the existence of ``$C_3 \G$'', and about $C_3 \CP^\infty_E$ serving as a good model for $BU[6, \infty)_E$.
 
-\emph{Nevertheless}, we will show that this algebraic model is still accurate by complete topological calculation.  Our approach is divided between two fronts.\todo{Say something here about using one as motivation and the other as complete proof.}
+\emph{Nevertheless}, we will show that this algebraic model is still accurate by complete topological calculation.  Our approach is divided between two fronts.
 \begin{enumerate}
-    \item If we specialize to a particularly nice cohomology theory---such as $E = E_\Gamma$ a Morava $E$--theory---then we can use our extensive body of knowledge about finite height formal groups and their relationship to algebraic topology in order to force nice behavior into the story.
-    \item If we specialize to a particularly simple formal group---such as $\G_a$ and its associated cohomology theory $H\F_p$---then we can use our talent for performing computations in algebraic topology to completely exhaust the problem.
+    \item If we specialize to a particularly nice cohomology theory---such as $E = E_\Gamma$ a Morava $E$--theory---then we can use our extensive body of knowledge about finite height formal groups and their relationship to algebraic topology in order to force nice behavior into the story.  This should be thought of as an exploratory step: if there is a general statement to be found, it will be visible in this particularly algebro-geometric setting, where we can maybe compute fully enough to determine what it is.
+    \item If we specialize to a particularly simple formal group---such as $\G_a$ and its associated cohomology theory $H\F_p$---then we can use our talent for performing computations in algebraic topology to completely exhaust the problem.  This should be thought of as the ``actual'' proof: as in \Cref{COableCoopnsII}, we will show that successfully transferring the guess result from Morava $E$--theory to the setting of ordinary cohomology entails the result for \emph{any} complex-orientable cohomology theory.
 \end{enumerate}
 
 In this Lecture, we will pursue the first avenue.  We begin by setting $\Gamma$ to be a formal group of finite $p$--height of a field $k$ of positive characteristic $p$, and we let $E = E_\Gamma$ denote the associated Morava $E$--theory.  Our main technical tool will be the Postnikov fibration \[\OS{H\Z}{3} \to BU[6, \infty) \to BSU,\] and our main goals are to construct a model sequence of formal schemes, then show that $E$--theory is well-behaved enough that the formal schemes it constructs exactly match the model.
@@ -462,7 +463,7 @@ X_E \times \InternalHom{GroupSchemes}(Y_E, \Gm) \arrow[equal]{d} \arrow[densely 
 X_E \times \InternalHom{FormalGroups}(Y_E, \G_m) \arrow["f_E \times 1"]{r} & Y_E \times \InternalHom{FormalGroups}(Y_E, \G_m) \arrow["\operatorname{ev}"]{r} & \G_m. \arrow["\simeq"]{u}
 \end{tikzcd}
 \end{center}
-This is called \textit{the adjoint map}, and we write $\hat f$ for any of the above versions of this map, whether valued in $\G_m$, $\Gm$, or $\A^1$.  It encodes equivalent information to the $E_0$--linear map \[E_0 \to E_0 Y \widehat\otimes_{E_0} E^0 X\] dual to the map $E_0 X \to E_0 Y$ induced on $E$--homology.
+This is called \textit{the adjoint map}, and we write $\widehat f$ for any of the above versions of this map, whether valued in $\G_m$, $\Gm$, or $\A^1$.  It encodes equivalent information to the $E_0$--linear map \[E_0 \to E_0 Y \widehat\otimes_{E_0} E^0 X\] dual to the map $E_0 X \to E_0 Y$ induced on $E$--homology.
 \end{definition}
 
 \begin{remark}
@@ -475,7 +476,7 @@ This construction converts many properties of $f$ into corresponding properties 
 \end{remark}
 
 \begin{example}
-Recall the vector bundle $\Pi_2$ lifted through $BSU$, defined at the top of this Lecture and of great interest to us in \Cref{MSUDay}.  The adjoint to the classifying map of $\Pi_2$ is a map of formal schemes\todo{All the hats in this Remark differ.} \[\hat \Pi_2\co (\CP^\infty_E)^{\times 2} \times \Spec E_0 BSU \to \Gm,\] which passes through the exponential adjunction to become a map \[\Spec E_0 BSU \to \InternalHom{FormalSchemes}((\CP^\infty_E)^{\times 2}, \Gm).\]  Because the adjoint construction preserves properties of the class $\Pi_2$, we learn that this map factors through the closed subscheme
+Recall the vector bundle $\Pi_2$ lifted through $BSU$, defined at the top of this Lecture and of great interest to us in \Cref{MSUDay}.  The adjoint to the classifying map of $\Pi_2$ is a map of formal schemes \[\widehat \Pi_2\co (\CP^\infty_E)^{\times 2} \times \Spec E_0 BSU \to \Gm,\] which passes through the exponential adjunction to become a map \[\Spec E_0 BSU \to \InternalHom{FormalSchemes}((\CP^\infty_E)^{\times 2}, \Gm).\]  Because the adjoint construction preserves properties of the class $\Pi_2$, we learn that this map factors through the closed subscheme
 \begin{center}
 \begin{tikzcd}
 \Spec E_0 BSU \arrow[densely dotted]{r} \arrow[bend left=10]{rr} & C^2(\CP^\infty_E; \Gm) \arrow{r} & \InternalHom{FormalSchemes}((\CP^\infty_E)^{\times 2}, \Gm)
@@ -485,7 +486,7 @@ of symmetric, rigid functions satisfying $kU^0$--linearity.  By careful manipula
 \end{example}
 
 \begin{example}
-Similarly, we have defined a cohomology class \[\Pi_3 = (\L_1 - 1)(\L_2 - 1)(\L_3 - 1) \in kU^6(\CP^\infty)^{\times 3} = [(\CP^\infty)^{\times 3}, BU[6, \infty)].\]  As above, its adjoint induces a map (which we abusively also denote by $\widehat{\Pi_3}$) \[\widehat \Pi_3\co \Spec E_0 BU[6, \infty) \to C^3(\CP^\infty_E; \Gm),\] where $C^3(\CP^\infty_E; \Gm)$ is the scheme of $\Gm$--valued trivariate functions on $\CP^\infty_E$ satisfying symmetry, rigidity, and $kU^0$--linearity.\footnote{If $C_3 \CP^\infty_E := \Sym^3_{\Div \CP^\infty_E} \Div_0 \CP^\infty_E$ were to exist, this scheme $C^3(\CP^\infty_E; \Gm)$ would be its Cartier dual.}
+Similarly, we have defined a cohomology class \[\Pi_3 = (\L_1 - 1)(\L_2 - 1)(\L_3 - 1) \in kU^6(\CP^\infty)^{\times 3} = [(\CP^\infty)^{\times 3}, BU[6, \infty)].\]  As above, its adjoint induces a map (which we abusively also denote by $\widehat \Pi_3$) \[\widehat \Pi_3\co \Spec E_0 BU[6, \infty) \to C^3(\CP^\infty_E; \Gm),\] where $C^3(\CP^\infty_E; \Gm)$ is the scheme of $\Gm$--valued trivariate functions on $\CP^\infty_E$ satisfying symmetry, rigidity, and $kU^0$--linearity.\footnote{If $C_3 \CP^\infty_E := \Sym^3_{\Div \CP^\infty_E} \Div_0 \CP^\infty_E$ were to exist, this scheme $C^3(\CP^\infty_E; \Gm)$ would be its Cartier dual.}
 \end{example}
 
 We also have the following analogue of the compatibility results \Cref{BUtoBUZ} and \Cref{BSUToBU} of the previous section:
@@ -735,23 +736,22 @@ Ever the optimists, we turn to the algebra.  We begin by reusing a strategy prev
 The unique symmetric additive $2$--cocycle of homogeneous degree $n$ has the form \[c_n(x, y) = \begin{cases} (x + y)^n - x^n - y^n & \text{if $n \ne p^j$}, \\ \frac{1}{p} \left( (x + y)^n - x^n - y^n \right) & \text{if $n = p^j$}. \end{cases} \qed\]
 \end{corollary}
 
-Our goal, then, is to select such an $f_+ \in C^2(\G_a; \G_a)$ and study the minimal conditions needed on a symbol $a$ to produce a point in $C^2(\G_a; \Gm)$ of the form $1 + af_+ + \cdots$.  Since $c_n = \frac{1}{d_n} \delta(x^n)$ is itself produced by an additive formula, life would be easiest if we had access to an exponential, so that we could build\todo{These are different $\delta$s. Tag one with a plus?} \[\text{``$ \delta \exp(a_n x^n)^{1/d_n} = \exp(\delta a_n x^n / d_n) = \exp(a_n c_n). $''}\]  However, the existence of an exponential series is equivalent to requiring that $a_n$ carry a divided-power structure, which turns out not to be minimal.  In fact, we can show that \emph{no} conditions on $a_n$ are required \emph{at all}.
+Our goal, then, is to select such an $f_+ \in C^2(\G_a; \G_a)$ and study the minimal conditions needed on a symbol $a$ to produce a point in $C^2(\G_a; \Gm)$ of the form $1 + af_+ + \cdots$.  Since $c_n = \frac{1}{d_n} \delta(x^n)$ is itself produced by an additive formula, life would be easiest if we had access to an exponential, so that we could build \[\text{``$ \delta_{(\G_a; \Gm)} \exp(a_n x^n)^{1/d_n} = \exp(\delta_{(\G_a; \G_a)} a_n x^n / d_n) = \exp(a_n c_n). $''}\]  However, the existence of an exponential series is equivalent to requiring that $a_n$ carry a divided-power structure, which turns out not to be minimal.  In fact, we can show that \emph{no} conditions on $a_n$ are required \emph{at all}.
 
 \begin{definition}[{cf.\ \Cref{ArtinHasseExponential}}]
 The \textit{Artin--Hasse exponential} is the power series \[E_p(t) = \exp\left( \sum_{j=0}^\infty \frac{t^{p^j}}{p^j} \right) \in \Z_{(p)}\ps{t}.\]
 \end{definition}
 
-\begin{lemma}
-\citeme{AHS}
-Write $\delta_{\G_a, \Gm}\co C^1(\G_a; \Gm) \to C^2(\G_a; \Gm)$ and \[d_n = \begin{cases} 1 & \text{if $n = p^j$}, \\ 0 & \text{otherwise}. \end{cases}\]  The class $g_n(x, y) = \delta_{\G_a,\Gm} E_p(a_n x^n)^{1/p^{d_n}}$ is a series in $\F_p\ps{a_n}\ps{x,y}$ and presents a point in $C^2(\G_a; \Gm)$ reducing to $a_n c_n \in C^2(\G_a; \G_a)$ on tangent spaces.
+\begin{lemma}[{\cite[Proposition 3.9]{AHSTheoremOfTheCube}}]
+Write $\delta_{(\G_a, \Gm)}\co C^1(\G_a; \Gm) \to C^2(\G_a; \Gm)$ and \[d_n = \begin{cases} 1 & \text{if $n = p^j$}, \\ 0 & \text{otherwise}. \end{cases}\]  The class $g_n(x, y) = \delta_{(\G_a,\Gm)} E_p(a_n x^n)^{1/p^{d_n}}$ is a series in $\F_p[a_n]\ps{x,y}$ and presents a point in $C^2(\G_a; \Gm)$ reducing to $a_n c_n \in C^2(\G_a; \G_a)$ on tangent spaces.
 \end{lemma}
 \begin{proof}
-Recall from \Cref{ArtinHasseExponential} that $E_p$ has coefficients in $\Z_{(p)}$, and hence it can be reduced to a series with coefficients in $\F_p$.   We then make the calculation \[g_n(x, y) = \delta_{\G_a, \Gm} E_p(a_n x^n)^{1/p^{d_n}} = \exp\left( \sum_{j=0}^\infty \frac{a_n^{p^j} \delta_{\G_a, \G_a} x^{np^j}}{p^{j + d_n}} \right) = \exp\left( \sum_{j=0}^\infty \frac{a_n^{p^j} c_{np^j}(x, y)}{p^j} \right).\]  As claimed, the leading term is exactly $a_n c_n$, this series is symmetric, and since it is in the image of $\delta_{\G_a, \Gm}$ it is certainly a $2$--cocycle.
+Recall from \Cref{ArtinHasseExponential} that $E_p$ has coefficients in $\Z_{(p)}$, and hence it can be reduced to a series with coefficients in $\F_p$.   We then make the calculation \[g_n(x, y) = \delta_{(\G_a, \Gm)} E_p(a_n x^n)^{1/p^{d_n}} = \exp\left( \sum_{j=0}^\infty \frac{a_n^{p^j} \delta_{(\G_a, \G_a)} x^{np^j}}{p^{j + d_n}} \right) = \exp\left( \sum_{j=0}^\infty \frac{a_n^{p^j} c_{np^j}(x, y)}{p^j} \right).\]  As claimed, the leading term is exactly $a_n c_n$, this series is symmetric, and since it is in the image of $\delta_{(\G_a, \Gm)}$ it is certainly a $2$--cocycle.
 \end{proof}
 
 Letting $n$ range, this culminates in the following calculation:
 
-\begin{lemma}[{\cite[Proposition 3.9]{AHSTheoremOfTheCube}}]
+\begin{lemma}[{\cite[Equation 3.7]{AHSTheoremOfTheCube}}]
 The map \[\Spec \Z_{(p)}[a_n \mid n \ge 2] \xrightarrow{\prod_{n \ge 2} g_2} C^2(\G_a; \Gm) \times \Spec \Z_{(p)}\] is an isomorphism. \qed
 \end{lemma}
 
@@ -1145,7 +1145,7 @@ An \textit{elliptic spectrum} consists of a even--periodic ring spectrum $E$, a 
 \end{definition}
 
 \begin{remark}
-We have chosen to consider \emph{isomorphisms} of elliptic curve rather than general homomorphisms because this is what algebraic topology suggests that we do.  After all, the mixed cooperations of complex-oriented ring spectra are modeled by the isomorphisms of the associated formal groups.\todo{This could be stated better. We're using $E \sm E$ as a proxy for $E \to F$.}  In the next Case Study, we will develop a theory (with an attendant notion of a ``context'') which incorporates isogenies of elliptic curves in addition to isomorphisms.
+Our preference for \emph{isomorphisms} of elliptic curves rather than general homomorphisms is prompted by our study of stable operations: we have seen that a stable operation between complex-oriented ring spectra can only ever give rise to an isomorphism of formal group laws (incorporating a suitable base change).  More broadly, we have also found that the collection of possible isomorphisms of formal group laws organizes into the \textit{stable context}, a very important object in our study.  In the next Case Study, we will develop a theory (with an attendant notion of context) which incorporates \emph{isogenies} of elliptic curves in addition to isomorphisms.
 \end{remark}
 
 Coupling \Cref{DefnEllipticSpectrum} to \Cref{BU6Triumvirate} and \Cref{Theta3IsTrivial}, we conclude the following:
