--- a/cooperations.tex
+++ b/cooperations.tex
@@ -6,11 +6,10 @@
 In \Cref{StableContextLecture} (and more broadly in \Cref{ChapterFiniteSpectra}), we codified the structure of the stable $E$--cooperations acting on the $E$--homology of a spectrum $X$, attached to it the $E$--Adams spectral sequence which approximates the stable homotopy groups $\pi_* X$, and gave algebro-geometric descriptions of the stable cooperations for some typical spectra: $H\F_2$, $MO$, and $MU$.  We will now pursue a variation on this theme, where we consider the $E$--homology of a \emph{space} rather than of a generic spectrum.  In this Case Study, we will examine the theory of cooperations that arises from this set-up, called the \textit{unstable $E$--cooperations}.  This broader collection of cooperations has considerably more intricate structure than their stable counterparts, requiring the introduction of a new notion of an unstable context.  With that established, we will again find that $E$--homology assigns spaces to quasicoherent Cartesian sheaves over the unstable context, and we will again assemble an \emph{unstable} $E$--Adams spectral sequence approximating the \emph{unstable} homotopy groups of the input space, whose $E^2$--page in favorable situations is tracked by the cohomology of the sheaf over the unstable context.
 
 Remarkably, these unstable contexts also admit algebro-geometric interpretations.  In finding the right language for this, we introduce different subclasses of cooperations (e.g., \textit{additive}), and we are also naturally led to consider \textit{mixed cooperations} (as we did stably in \Cref{OrientationsOnEAndMU}) of the form $F_* \OS{E}{*}$.  The running theme is that when $E$ and $F$ are complex-orientable, there is a natural approximation map \[\Spec Q^* F_* \OS{E}{*} \to \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E)\] which is an isomorphism in every situation of interxest.  However, these isomorphisms do not appear to admit uniform proofs\footnote{The best uniform result I can find is due to Butowiez and Turner~\cite[Theorem 3.12]{ButowiezTurner}.}, so we instead investigate the following cases by hand:
-\todo{You will probably have to re-reference this list.}
 \begin{itemize}
 \item (\Cref{UnstableContextsSection}:) For $F = E = H\F_2$, we compute the full unstable dual Steenrod algebra $H\F_2{}_* \OS{H\F_2}{*}$ by means of iterated bar spectral sequences.  We then pass to the additive unstable cooperations, where we show by hand that this presents the homomorphism scheme $\InternalHom{FormalGroups}(\G_a, \G_a)$.  Finally, we pass to the stable additive cooperations, and we check that our results here are compatible with the isomorphism \[\Spec H\F_2{}_* H\F_2 \cong \InternalAut{\G_a}\] presented in \Cref{SteenrodAlgIdentifiedWithAutGa}.
 \item (\Cref{COableCoopnsII}:) We next consider the case where $E = MU$ and where $F$ is any complex-orientable theory.  We begin with the case $F = H\F_p$, where we can again approach the problem using iterated bar spectral sequences.  The resulting computation is sufficiently nice that we can use this special case of $F = H\F_p$ to deduce the further case of $F = H\Z_{(p)}$, then $F = H\Z$, then $F = MU$, and then finally $F$ any complex-orientable theory.
-\item (\Cref{LEFTCooperations}:) Having been able to vary $F$ as widely as possible in the previous case, we then turn to trying to vary $E$.  This is considerably harder, since the infinite loopspaces $\OS{E}{*}$ associated to $E$ are extremely complicated and vary wildly under even ``small'' changes in $E$.  However, in the special case of $F = H\F_p$, we have an incredibly powerful trick available to us: Dieudonn\'e theory, discussed in \Cref{SectionDieudonneModules}, gives an equivalence of categories \[D_*\co \CatOf{HopfAlgebras}^{> 0, \fin}_{\F_p/} \to \CatOf{GradedDMods},\] which postcomposes with \[\CatOf{Spectra} \xrightarrow{\Loops^\infty} \CatOf{Loopspaces} \xrightarrow{H\F_p{}_*} \CatOf{HopfAlgebra}^{>0, \fin}_{\F_p/} \xrightarrow{D_*} \CatOf{GradedDMods} \subseteq \CatOf{Modules}_{\Cart}\] to give a homological functor.  This means that the Dieudonn\'e module associated to an infinite loopspace varies stably with the spectrum underlying the loopspace, which is enough leverage to the settle the case where $E$ is any Landweber--flat theory.
+\item (\Cref{LEFTCooperations}:) Having been able to vary $F$ as widely as possible in the previous case, we then turn to trying to vary $E$.  This is considerably harder, since the infinite loopspaces $\OS{E}{*}$ associated to $E$ are extremely complicated and vary wildly under even ``small'' changes in $E$.  However, in the special case of $F = H\F_p$, we have an incredibly powerful trick available to us: Dieudonn\'e theory, discussed in \Cref{SectionDieudonneModules}, gives an equivalence of categories \[D_*\co \CatOf{GradedHopfAlgebras}^{> 0, \fin}_{\F_p/} \to \CatOf{GradedDMods},\] which postcomposes with \[\CatOf{Spectra} \xrightarrow{\Loops^\infty} \CatOf{Loopspaces} \xrightarrow{H\F_p{}_*} \CatOf{GradedHopfAlgebras}^{>0, \fin}_{\F_p/} \xrightarrow{D_*} \CatOf{GradedDMods} \subseteq \CatOf{GradedModules}_{\Cart}\] to give a homological functor.  This means that the Dieudonn\'e module associated to an infinite loopspace varies stably with the spectrum underlying the loopspace, which is enough leverage to the settle the case where $E$ is any Landweber--flat theory.
 \item (\Cref{CoopnsForMoravaKandHA}:) Finally, we settle one further case not covered by any of our generic hypotheses above: $F = K_\Gamma$ and $E = H\Z/p^j$.  Neither $K_\Gamma$ nor $H\Z/p^j$ is Landweber--flat, but because $K_\Gamma$ is a field spectrum and because the additive group law associated to $H\Z/p^j$ is so simple, we can still perform the requisite iterated bar spectral sequence calculation by hand.
 \end{itemize}
 
@@ -43,7 +42,7 @@ or later on, when given a ring spectrum $\eta\co \S \to E$, the adjunction
 \CatOf{Spectra} = \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} & \CatOf{Modules}_E \arrow[shift left=0.4em, "\mathrm{forget}"]{l} .
 \end{tikzcd}
 \end{center}
-The identification of $\CatOf{Modules}_S$ with $T$--algebras in $\CatOf{Modules}_R$ for the monad $T = \mathrm{forget} \circ (- \otimes_R S)$ is the objective of \textit{monadic descent}\citeme{give a reference to Barr--Beck here}.  This categorical recasting is ignorant of some of the algebraic geometry we discovered next, but it is suitable for us now as we consider the composition with a second adjunction:
+The identification of $\CatOf{Modules}_S$ with $T$--algebras in $\CatOf{Modules}_R$ for the monad $T = \mathrm{forget} \circ (- \otimes_R S)$ is the objective of \textit{monadic descent}~\cite[Theorem 4.7.4.5]{LurieHA}.  This categorical recasting is ignorant of some of the algebraic geometry we discovered next, but it is suitable for us now as we consider the composition with a second adjunction:
 \begin{center}
 \begin{tikzcd}
 \CatOf{Spaces} \arrow[shift left=0.4em]{r}{\Susp^\infty} & \CatOf{Spectra} = \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} \arrow[shift left=0.4em]{l}{\Loops^\infty} & \CatOf{Modules}_E \arrow[shift left=0.4em, "\mathrm{forget}"]{l} .
@@ -77,11 +76,9 @@ To begin, we would like to recognize the cosimplicial abelian group $\pi_* \shea
 A ring spectrum $E$ is said to satisfy the \textbf{U}nstable \textbf{F}latness \textbf{H}ypothesis, or \UFH, if $E_* \OS{E}{k}$ is a free $E_*$--module for every value of $k$.\footnote{This helps us understand the following analogous zigzag: \[\pi_m E(X) \xrightarrow{\eta_R} \pi_m E(E(X)) \xleftarrow{\mu \circ 1} \pi_m E(E(E(X))) \xleftarrow{\mathrm{compose}} \pi_m E(E(S^n)) \times \pi_n E(X).\]}
 \end{definition}
 
-Under this condition, we again turn to studying the structure of $\sheaf{UD}_E(S^k)$ as $k$ ranges.  If we had a Segal condition, we would expect the structure present to be determined by $\pi_* \sheaf{UD}_E(S^*)[j]$ for $j \le 2$.  The data at $j = 0$ is largely redundant: \[\pi_* E(S^k) = \pi_* \OS{E}{k} = E_{*-k}\] is a shifted copy of the coefficient ring of $E$ for each $k$.  The data at $j = 1$ consists of the homology groups of the spaces in the $\Omega$--spectrum for $E$: \[\pi_* E(E(S^k)) = E_* \OS{E}{k}.\]  There are three pieces of structure present here: the augmentation map $E_* \OS{E}{k} \to E_* (\Susp^k E) \to E_{*-k}$, the left unit map $E_{*-k} \to E_{*-k} \OS{E}{0}$, and the right unit map $E_{*-k} \to E_* \OS{E}{k}$.\todo{Get this right.}  The assumption {\UFH} gives us a foothold on the case $j = 2$: a choice of basis for $E_* \OS{E}{k}$ gives an unstable isomorphism $E(E(S^k)) \simeq \prod_\ell \OS{E}{n_\ell}$, so that $\pi_* \sheaf{UD}_E(S^k)[2]$ splits as a tensor product of terms of the form $E_* \OS{E}{n_\ell}$.  Here, we find a lot of structure: the addition of cohomology classes induces a map \[\ast\co E_* \OS{E}{k} \otimes_{E_*} E_* \OS{E}{k} \to E_* \OS{E}{k};\] the multiplication induces a map \[\circ\co E_* \OS{E}{k} \otimes E_* \OS{E}{k'} \to E_* \OS{E}{k+k'};\] these are compatible with the images of unit classes $0, 1 \in \pi_0 E$ under the left- and right-units specified above; there is an additive inverse map \[\chi\co E_* \OS{E}{k} \to E_* \OS{E}{k}\] compatible with the $\ast$--product; there is a diagonal map \[\Delta\co E_* \OS{E}{k} \to E_* \OS{E}{k} \otimes_{E_*} E_* \OS{E}{k};\] each $E_* \OS{E}{k}$ becomes a Hopf algebra using $\chi$, $\ast$, and $\Delta$; and there is a distributivity condition pictured in \Cref{DistributivityDiagram} intertwining $\ast$, $\circ$, and $\Delta$.
+Under this condition, we again turn to studying the structure of $\sheaf{UD}_E(S^k)$ as $k$ ranges.  If we had a Segal condition, we would expect the structure present to be determined by $\pi_* \sheaf{UD}_E(S^*)[j]$ for $j \le 2$.  The data at $j = 0$ is largely redundant: \[\pi_* E(S^k) = \pi_* \OS{E}{k} = E_{*-k}\] is a shifted copy of the coefficient ring of $E$ for each $k$.  The data at $j = 1$ consists of the homology groups of the spaces in the $\Omega$--spectrum for $E$: \[\pi_* E(E(S^k)) = E_* \OS{E}{k}.\]  There are three pieces of structure present here: the augmentation map $E_* \OS{E}{k} \to E_* (\Susp^k E) \to E_{*-k}$, the left unit map $E_{*-k} \to E_{*-k} \OS{E}{0}$, and the right unit map $E_{*-k} \to E_* \OS{E}{k}$.\todo{Get this right.}  The assumption {\UFH} gives us a foothold on the case $j = 2$: a choice of basis for $E_* \OS{E}{k}$ gives an unstable isomorphism $E(E(S^k)) \simeq \prod_\ell \OS{E}{n_\ell}$, so that $\pi_* \sheaf{UD}_E(S^k)[2]$ splits as a tensor product of terms of the form $E_* \OS{E}{n_\ell}$.  Here, we find a lot of structure: the addition of cohomology classes induces a map \[\ast\co E_* \OS{E}{k} \otimes_{E_*} E_* \OS{E}{k} \to E_* \OS{E}{k};\] the multiplication induces a map \[\circ\co E_* \OS{E}{k} \otimes E_* \OS{E}{k'} \to E_* \OS{E}{k+k'};\] these are compatible with the images of unit classes $0, 1 \in \pi_0 E$ under the left- and right-units specified above; there is an additive inverse map \[\chi\co E_* \OS{E}{k} \to E_* \OS{E}{k}\] compatible with the $\ast$--product and giving a skew-commutativity formula $a \circ b = \chi(b \circ a)$; there is a diagonal map \[\Delta\co E_* \OS{E}{k} \to E_* \OS{E}{k} \otimes_{E_*} E_* \OS{E}{k};\] each $E_* \OS{E}{k}$ becomes a Hopf algebra using $\chi$, $\ast$, and $\Delta$; and there is a distributivity condition pictured in \Cref{DistributivityDiagram} intertwining $\ast$, $\circ$, and $\Delta$.
 \todo{Make sure you have all of BJW's structure here: ``These are Hopf rings plus $[v] \in E_0 \OS{E}{*}$, the maps $r_*\co E_* \OS{E}{j} \to E_* \OS{E}{k}$ for $r\co E^k \OS{E}{j}$ a cohomology operation, and the ``augmentation'' (cf.\ BJW 10.42) $E_* \OS{E}{k} \to Q(E)^k_* \to E_* E \to E$.'' In particular, I do not understand this last piece, so I should make sure it's in here.)}
 \todo{I'm uncomfortable with all this graded stuff happening here.  I'd like to be able to make statements in terms of periodic cohomology theories, and I'd like to use the stable suspension operation to make things degree $0$ as needed.  What I'd \emph{really} like is to make the unstable Adams spectral sequence converge to a quasicoherent sheaf over $B\Gm$ (or $B\mathbb N$ or whatever), just like in Section 1.5.}
-\todo{So this is sort of like a Hopf algebra/algebroid except with an extra grading ($s$), which corresponds to the fact that elements of $E_*\underline{E}_m$ correspond to maps where the source has no grading/ has any grading (just like the elements in stable $E_*E$), but the target comes from a specific level in the $\Omega$-spectrum. Maybe mention something to this effect? -EB}
-\todo{I think that the ``skew--commutativity'' of $\circ$--multiplication (in particular: its intertwining with $\chi$!!) is also worth mentioning.  This confused me for a good while, being most familiar with the material in Lecture 4.7.}
 
 \begin{figure}
 \begin{center}
@@ -117,11 +114,10 @@ If $E$ is a spectrum with $\pi_{-1} E = 0$, then $\OS{E}{1} \simeq B\OS{E}{0}$. 
 \end{lemma}
 \noindent This is useful to us because $B(-)$ comes with a natural skeletal filtration, which we can use to form a spectral sequence.
 \begin{lemma}[{\cite[Proposition 3.2]{Segal}, \cite[Theorem 2.1]{RavenelWilsonKthyOfEMSpaces}}]
-Let $G$ be a topological group.  There is a convergent spectral sequence of algebras of signature \[E^1_{*, j} = F_*(\Susp G)^{\sm j} \Rightarrow F_* BG.\]  In the case that $F$ has K\"unneth isomorphisms $F_*((\Susp G)^{\sm j}) \cong F_*(\Susp G)^{\otimes_{F_*} j}$, the $E^2$--page is identifiable as \[E^2_{*, *} \cong \Tor^{F_* G}_{*, *}(F_*, F_*)\] and the spectral sequence is one of Hopf algebras. \qed
+Let $G$ be a topological group.  There is a convergent spectral sequence of algebras of signature \[E^1_{*, j} = F_*(\Susp G)^{\sm j} \Rightarrow F_* BG.\]  In the case that $F$ has K\"unneth isomorphisms $\widetilde F_*((\Susp G)^{\sm j}) \cong \widetilde F_*(\Susp G)^{\otimes_{F_*} j}$, the $E^2$--page is identifiable as \[E^2_{*, *} \cong \Tor^{F_* G}_{*, *}(F_*, F_*)\] and the spectral sequence is one of Hopf algebras. \qed
 \end{lemma}
 \begin{corollary}
-\todo{Are you getting reduced and unreduced right in all these K\"unneth assumptions?}
-If $E$ is a connective spectrum and $F$ has K\"unneth isomorphisms $F_*(\OS{E}{j} \sm \OS{E}{j}) \cong F_* \OS{E}{j} \otimes_{F_*} F_* \OS{E}{j}$ for all $j$, then there is a family of spectral sequences of Hopf algebras with signatures \[E^2_{*, *} \cong \Tor^{F_* \OS{E}{j}}_{*, *}(F_*, F_*) \Rightarrow F_* \OS{E}{j+1}. \qed\]
+If $E$ is a connective spectrum and $F$ has K\"unneth isomorphisms $\widetilde F_*(\OS{E}{j} \sm \OS{E}{j}) \cong \widetilde F_* \OS{E}{j} \otimes_{F_*} \widetilde F_* \OS{E}{j}$ for all $j$, then there is a family of spectral sequences of Hopf algebras with signatures \[E^2_{*, *} \cong \Tor^{F_* \OS{E}{j}}_{*, *}(F_*, F_*) \Rightarrow F_* \OS{E}{j+1}. \qed\]
 \end{corollary}
 
 That this spectral sequence is multiplicative for the $\ast$--product is useful enough, but the situation is actually much, much better than this:
@@ -200,7 +196,6 @@ and the computation above presents $\Spec \mathcal A_*$ as the open subscheme of
 \end{align*}
 
 Some of the complexity here was eliminated by the smallness of $\Spec H\F_2{}_*$.  For a general ring spectrum $E$, we also have to account for $\Spec E_*$, but the end result is similar to that of \Cref{FHGivesComodules}:
-\todo{Consider elaborating on how $Q^*$ does not give a Hopf algebroid because it's missing a version of $\chi$ for $\circ$--multiplication.  It's kind of remarkable that inverting the homology suspension element automatically produces such a $\chi^{\circ}$.}
 \begin{lemma}
 For a ring spectrum $E$ satisfying {\UFH}, the additive unstable cooperations form rings of functions on the objects and morphisms of a category scheme $\Ucontext{E}$, and the $E$--homology of a space $X$ forms a Cartesian quasicoherent sheaf $\Ucontext{E}(X)$ over its nerve. \qed
 \end{lemma}
@@ -227,6 +222,10 @@ If $E$ satisfies {\UGH} and $X$ is a space with $E_* X = SN$ for some connective
 \begin{proof}
 Under {\UGH}, we have a factorization \[\CatOf{Coalgebras}_{G}(E_* S^t, -) = \CatOf{Comodules}_{U}(E_* S^t, Q^*(-))\] and the injective objects intertwine to give a composite functor spectral sequence \[E_2^{r, s} = \Ext^r_{\CatOf{Coalgebras}_U}(E_* S^t, R^s_{\CatOf{Coalgberas}_G} Q^*(M)) \Rightarrow \Ext^{r+s}_{\CatOf{Coalgebras}_G}(E_* S^t, M).\]  If $M = E_* X = SN$ for some connective free $E_*$--module $N$, then $R^{q > 0}_{\CatOf{Coalgebras}_G} Q^*(E_* X) = 0$, the composite functor spectral sequence collapses, and $\Ext^s_{\CatOf{Coalgebras}_U}(E_* S^t, Q^* E_* X)$ computes the unstable Adams $E_2$--term as claimed.
 \end{proof}
+
+\begin{remark}
+Note that $Q^* H\F_2{}_* \OS{H\F_2}{*}$ does \emph{not} form a Hopf algebra, essentially because it is missing a version of $\chi$ that inverts $\circ$--multiplication.  It is remarkable that inverting the homology suspension element automatically produces such an antipode.
+\end{remark}
 
 \todo[inline]{Reinterpret this $\Ext$ group as some kind of sheaf cohomology.  Don't forget the goal of having a residual $\Gm$--action (or whatever) to distinguish the grading.}
 
@@ -417,7 +416,6 @@ Finally, we are able to explain the phenomenon uncovered by computation in \Cref
 Towards the second, there is an embedding of $\CatOf{Rings}$ into $\CatOf{HopfRings}$, analogous to the square-zero extension functor sending an abelian group $A$ to the augmented algebra $\Z \oplus A$ with trivial multiplication on $A$.
 
 \begin{definition}
-\todo{There ought to be a version of this relative to $R[S]$, and it ought to play a role when mapping into augmented Hopf $R[S]$--rings.}
 For a ring $R$, the $\ast$--square--zero Hopf ring $iR$ has underlying abelian group $\Z \oplus R$.  For an element $r \in R$, we write $[r] = (0, r)$ for the corresponding element in $iR$, and in this notation the Hopf ring structure maps are set by the formulas
 \begin{align*}
 iR \otimes iR & \xrightarrow{\ast} iR, & [r] \ast [r'] & = 0, & [r] \ast 1 & = [r], \\
@@ -430,8 +428,12 @@ iR & \xrightarrow{\eps} \Z, & \eps([r]) & = 1, & \eps(1) & = 1, \\
 \end{definition}
 
 \begin{lemma}
-We have $R \cong Q^* i R$, and moreover there is an adjunction \[(\Spec Q^* S)(R) = \CatOf{Rings}(Q^* S, R) = \CatOf{HopfRings}(S, iR) = (\SpH S)(iR). \qed\]
+We have $S \cong Q^* i S$, and moreover there is an adjunction \[(\Spec Q^* H)(S) = \CatOf{Rings}(Q^* H, S) = \CatOf{HopfRings}(H, iS) = (\SpH H)(iS). \qed\]
 \end{lemma}
+
+\begin{remark}
+More generally, if $A$ is an augmented $S$--algebra and $R$ is an auxiliary ring, there is a version of this square-zero extension construction that sends $A$ to a square-zero Hopf ring augmented over $R[S]$.  It admits a similar right adjoint to the category of $R$--algebras.
+\end{remark}
 
 We are thus algebraically motivated to understand the affine scheme $\Spec Q^* \AA(F, E)$, as this is what $\SpH \AA(F, E)$ restricts to on the subcategory of classical rings.  Note that the Hopf ring-ring $R[S]$ and the free relative Hopf ring $A_{R[S]}[B]$ both have an augmentation given by $[x] \mapsto 1$, so that the elements $\<x\> = [x] - [0]$ form a generating set of the augmentation ideal.
 \begin{lemma}\label{ArithmeticInQAst}
@@ -1038,20 +1040,15 @@ We use this to continue the analysis of the case $q = 1$ and $j = \infty$, where
 
 There is a lot of structure visible in this collection of spectral sequences, as considered simultaneously.  Without further inspection, the spectral sequence at $j = \infty$ records that $\CP^\infty_K$ is a formal variety, and the spectral sequences at the finite values $1 \le j < \infty$ encode in their differentials the behavior of the map $p^j\co \Gamma \to \Gamma$ on functions---indeed, this appears to be the entire job of $a'_\emptyset$.  Lastly, we notice that the $E_\infty$ page of each finite-range spectral sequence includes into the spectral sequence at $j = \infty$, and moreover this filtration is exhaustive: every term in the $j = \infty$ spectral sequence appears at some $j < \infty$ stage.  Since this last property is about the $E_\infty$ pages, it is really a property of the formal group $\Gamma$, which we record in a definition:
 
-\begin{definition}
-\citeme{You can find a definition for this too}
-A \textit{$p$--divisible group}\footnote{Some like to call these \textit{Barsotti--Tate groups}, which is probably the better name, since ``$p$--divisible group'' sounds like a property rather than all this data.} over a field $k$ is a system $\mathbb G_j$ of finite group schemes and inclusions $i_j\co \mathbb G_j \to \mathbb G_{j+1}$ which participate in maps of exact sequences
-\begin{center}
-\begin{tikzcd}
-0 \arrow{r} & \mathbb G_1 \arrow{r} \arrow{d} & \mathbb G_j \arrow["p"]{r} \arrow{d} & \mathbb G_j \arrow{d} \\
-0 \arrow{r} & \mathbb G_1 \arrow{r} & \mathbb G_{j+1} \arrow{r} & \mathbb G_{j+1}.
-\end{tikzcd}
-\end{center}
-In particular, this identifies $\mathbb G_j$ as the subgroup of $p^j$--torsion of the system $\mathbb G$.  A $p$--divisible group is said to be \textit{connected} when its constituent subgroups $\mathbb G_j$ are infinitesimal thickenings of $\Spec k$.
+\begin{definition}[{\cite[Definition 4.1]{Grothendieck}}]
+A \textit{$p$--divisible group}\footnote{Some like to call these \textit{Barsotti--Tate groups}, which is probably the better name, since ``$p$--divisible group'' sounds like a property rather than all this data.} over a field $k$ is a system $\mathbb G_j$ of finite group schemes and inclusions $i_k^j\co \mathbb G_k \to \mathbb G_j$ for $k < j$ which model the inclusions $\mathbb G_j[p^k] \subseteq \mathbb G_j$.
 \end{definition}
 
-\begin{lemma}
-\citeme{Hazewinkel presumably}
+\begin{definition}
+A $p$--divisible group is said to be \textit{connected} when its constituent subgroups $\mathbb G_j$ are infinitesimal thickenings of $\Spec k$.  An example of this is the sequence of torsion subgroups $\G[p^j]$ of a formal group $\G$.  A \emph{nonexample} of this is the sequence of constant group schemes $\G_j = S^1[p^j]$.
+\end{definition}
+
+\begin{lemma}[{\cite[Section 6.7]{Grothendieck}}]
 Over a perfect field of positive characteristic $p$, a connected $p$--divisible group is equivalent to a smooth formal group of finite height.
 \end{lemma}
 \begin{proof}[Correspondence]
