notes from regensburg about Spin/SU

--- a/preamble.tex
+++ b/preamble.tex
@@ -188,6 +188,7 @@
 \newcommand{\Tr}{\mathrm{Tr}}
 \newcommand{\Cart}{\mathrm{Cart}}
 
+\DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\Ind}{Ind}
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Spf}{Spf}
