fix a bunch of features of the ANSS pictures

--- a/anss3.tex
+++ b/anss3.tex
@@ -6,7 +6,7 @@
     classes={minimum width={0.3ex}},
     %edge labels=description,
     math nodes,    
-    y range={0}{9},
+    y range={0}{10},
     x range={0}{45},
     x label step=5,
     xscale=0.45,
@@ -69,7 +69,8 @@
 \betaclass(54,6)
 
 % tower off of beta_3
-\alphaclass(45,3)
+\node[circle,fill,scale=0.3] at (45,3) {};
+\class(45,3) \structline(42,2,-1)(45,3,-1)
 \betaclass(52,4)
 
 % d5s
