--- a/finite.tex
+++ b/finite.tex
@@ -72,7 +72,7 @@ An $S$--module $N$ equipped with such an isomorphism $\phi\co S \otimes_R N \to 
 \end{definition}
 
 Descent data admit two equivalent reformulations, both of which are useful to note.
-\begin{remark}\citeme{Find a citation for the canonical coring.}
+\begin{remark}[{\cite{Amitsur}}]
 The ring $C = S \otimes_R S$ admits the structure of an $S$--coring: we can use the map $f$ to produce a relative diagonal map \[\Delta\co S \otimes_R S \cong S \otimes_R R \otimes_R S \xrightarrow{1 \otimes f \otimes 1} S \otimes_R S \otimes_R S \cong (S \otimes_R S) \otimes_S (S \otimes_R S).\]  The descent datum $\phi$ on an $S$--module $N$ is equivalent to a $C$--coaction map.  The $S$--linearity of the coaction map is encoded by a square
 \begin{center}
 \begin{tikzcd}
@@ -233,7 +233,6 @@ Most of the homology theories we will discuss have these {\CH} and {\FH} propert
 
 \begin{example}\label{ContextOfMUPExample}
 The context for $MUP$ is considerably more complicated, but Quillen's theorem can be equivalently stated as giving a description of it.  Quillen's theorem on its face gives an equivalence $\Spec MUP_0 \cong \moduli{fgl}$, but in \Cref{OrientationsOnEAndMU} we also gave a description of $\Spec MUP_0 MUP$: it is the moduli of pairs of formal group laws equipped with an invertible power series intertwining them.  Altogether, this presents $\context{MUP}$ as the moduli of formal groups: \[\context{MUP} \simeq \moduli{fg} := \moduli{fgl} \mmod \moduli{ps}^{\gpd},\] where $\moduli{ps} = \InternalEnd(\A^1)$ is the moduli of self-maps of the affine line (i.e., of power series) and $\moduli{ps}^{\gpd}$ is the multiplicative subgroup of invertible such maps.  We include a picture of the $p$--localized Adams $E_2$--page in \Cref{ANSS2Figure} and \Cref{ANSS3Figure}.  In view of \Cref{WarningAboutStacks}, there is an important subtlety about the stack $\moduli{fg}$: an $R$--point is a functor on affines over $\Spec R$ which is locally isomorphic to a formal group, but whose local isomorphism \emph{may not patch} to give a global isomorphism.  This does not agree, a priori, with the definition of formal group given in \Cref{DefnFormalGps}, where the isomorphism witnessing a functor as a formal variety was expected to be global.  We will address this further in \Cref{CoordinatizbleFGs} below.
-\todo{Sidewaysfigure ANSS2 could use some label realignment. Sidewaysfigure ANSS3 has a missing feature: $\beta_3 \alpha_1$ has a $3$--division.}
 \end{example}
 
 \afterrectopage{
