remove some of the todos from Chapter 3

--- a/main.bib
+++ b/main.bib
@@ -164,6 +164,19 @@ MRREVIEWER = {Mark Hovey},
        URL = {http://dx.doi.org/10.1016/S0040-9383(99)00057-9},
 }
 
+@book {Araki,
+    AUTHOR = {Araki, Sh\^or\^o},
+     TITLE = {Typical formal groups in complex cobordism and {$K$}-theory},
+      NOTE = {Lectures in Mathematics, Department of Mathematics, Kyoto
+              University, No. 6},
+ PUBLISHER = {Kinokuniya Book-Store Co., Ltd., Tokyo},
+      YEAR = {1973},
+     PAGES = {v+101 pp. (loose errata)},
+   MRCLASS = {57D90 (55B15 14L05)},
+  MRNUMBER = {0375354},
+MRREVIEWER = {A. Dold},
+}
+
 @article {Balmer,
     AUTHOR = {Balmer, Paul},
      TITLE = {Spectra, spectra, spectra---tensor triangular spectra versus
