--- a/finite.tex
+++ b/finite.tex
@@ -260,6 +260,17 @@ The algebraic moduli $\context{MU} = (\Spec MU_*, \Spec MU_* MU)$ and the topolo
 If $E$ is a complex-oriented ring spectrum, then the simplicial sheaf $\context{MU}(E)$ has an extra degeneracy, which causes the $MU$--based Adams spectral sequence for $E$ to degenerate.  In this sense, the ``stackiness'' of $\context{MU}(E)$ is exactly a measure of the failure of $E$ to be orientable.
 \end{remark}
 
+\begin{remark}
+It is also possible to construct an Adams spectral sequence by iteratively smashing with the fiber sequence $\overline E \to \S \to E$ to form the tower
+\begin{center}
+\begin{tikzcd}
+\S \sm X \arrow{d} & \overline E \sm X \arrow{l} \arrow{d} & \overline E^{\sm 2} \sm X \arrow{l} \arrow{d} & \cdots \arrow{l} \\
+E \sm X & E \sm \overline E \sm X & E \sm \overline E^{\sm 2} \sm X & \cdots.
+\end{tikzcd}
+\end{center}
+This presentation makes the connection to descent much more opaque, but it does not require $E$ to be an $A_\infty$--ring spectrum.
+\end{remark}
+
 
 
 
@@ -340,14 +351,16 @@ We now show that the following conditions are equivalent:
 \item (\Cref{LazardSplittingLemma}) There is a canonical splitting $T_{2n} \to (Q \mathcal O_{\moduli{fgl}})_{2n}$.
 \end{enumerate}
 
-To verify that Claims 1 and 2 are equivalent, suppose that $x +_\phi y$ is some $(n+1)$--bud and that $x +_\phi' y$ is some $(n+1)$--bud such that \[(x +_\phi' y) = (x +_\phi y) + f(x, y)\] where $f(x, y)$ is homogeneous of degree $(n+1)$.  Symmetry of $x +_\phi' y$ enforces symmetry of $f$, and from associativity we calculate\todo{Typeset me better.}
+To verify that Claims 1 and 2 are equivalent, suppose that $x +_\phi y$ is some $(n+1)$--bud and that $x +_\phi' y$ is some $(n+1)$--bud such that \[(x +_\phi' y) = (x +_\phi y) + f(x, y)\] where $f(x, y)$ is homogeneous of degree $(n+1)$.  Symmetry of $x +_\phi' y$ enforces symmetry of $f$, and from associativity we calculate
 \begin{align*}
-(x +_\phi' y) +_\phi' z & = x +_\phi' (y +_\phi' z) \\
-(x +_\phi y + f(x, y)) +_\phi' z & = x +_\phi' (y +_\phi z + f(y, z)) \\
-(x +_\phi y + f(x, y)) +_\phi z + f(x +_\phi y + f(x, y), z) & = x +_\phi (y +_\phi z + f(y, z)) + f(x, y +_\phi z + f(y, z)) \\
-(x +_\phi y) +_\phi z + f(x, y) + f(x + y, z) & \equiv x +_\phi (y +_\phi z) + f(y, z) + f(x, y + z) \pmod{(x, y)^{n+2}},
+x +_\phi' (y +_\phi' z) & = x +_\phi' (y +_\phi z + f(y, z)) \\
+& = x +_\phi (y +_\phi z + f(y, z)) + f(x, y +_\phi z + f(y, z)) \\
+& \equiv x +_\phi (y +_\phi z) + f(y, z) + f(x, y + z) \pmod{(x, y)^{n+2}}, \\
+(x +_\phi' y) +_\phi' z = & (x +_\phi y + f(x, y)) +_\phi' z \\
+& = (x +_\phi y + f(x, y)) +_\phi z + f(x +_\phi y + f(x, y), z) \\
+& \equiv (x +_\phi y) +_\phi z + f(x, y) + f(x + y, z) \pmod{(x, y)^{n+2}},
 \end{align*}
-Conversely, given such an $f(x, y)$, the formal $(n+1)$--bud $+_\phi'$ formed by translating $+_\phi$ by $f$ is again a formal $(n+1)$--bud extending the same formal $n$--bud.
+resulting in the $2$--cocycle condition on $f$.  Conversely, given such a $2$--cocycle $f(x, y)$, the formal $(n+1)$--bud $+_\phi'$ formed by translating $+_\phi$ by $f$ is again a formal $(n+1)$--bud extending the same formal $n$--bud.
 
 To see that Claim 2 is equivalent to Claim 3, note that a group map \[(Q\mathcal O_{\moduli{fgl}})_{2n} \to A\] is equivalent data to a ring map \[\mathcal O_{\moduli{fgl}} \to Z \oplus A\] with the prescribed behavior on $(Q\mathcal O_{\moduli{fgl}})_{2n}$ and which sends all other indecomposables to $0$..  This shows that such a homomorphism of groups determines an extension of the $n$--bud $\G_a$ to an $(n+1)$--bud, which takes the form of a $2$--cocycle with coefficients in $A$, and hence factors through $T_{2n}$.
 
@@ -494,7 +507,7 @@ Stringing these together, for $p \nmid \ell$ we have \[\log([1/\ell] V_\ell F_\e
 
 Of course, the whole idea of ``height'' is that not every formal group law supports a logarithm.  Because of this, we would like to re-express $p$--typicality in more general terms.  Our foothold for this is the following computation of the $p$--series of a formal group law with $p$--typical logarithm:
 
-\begin{lemma}\label{pTypLogGivesNicePSeries}
+\begin{lemma}[{\cite[Section 4]{Araki}}]\label{pTypLogGivesNicePSeries}
 For a formal group $+_\phi$ with a logarithm $\log_\phi$, the logarithm is $p$--typical if and only if there are elements $v_d$ with \[[p]_\phi(x) = px +_\phi v_1 x^p +_\phi v_2 x^{p^2} +_\phi \cdots +_\phi v_d x^{p^d} +_\phi \cdots.\]
 \end{lemma}
 \begin{proof}[Proof sketch]
@@ -530,11 +543,10 @@ A parameter $g\co \A^1 \to \G$ of a formal group is said to be \textit{$p$--typi
 Every formal group law $+_\phi$ is naturally isomorphic to a $p$--typical one. \qed
 \end{corollary}
 
-\begin{lemma}[{cf.\ \Cref{pTypLogGivesNicePSeries}}]\label{pTypLawsHaveNicePSeries}
+\begin{lemma}[{\cite[Section 4]{Araki}, cf.\ \Cref{pTypLogGivesNicePSeries}}]\label{pTypLawsHaveNicePSeries}
 If $+_\phi$ is a $p$--typical formal group law, then there are elements $v_d$ with \[[p]_\phi(x) = px +_\phi v_1 x^p +_\phi v_2 x^{p^2} +_\phi \cdots +_\phi v_d x^{p^d} +_\phi \cdots.\]
 \end{lemma}
 \begin{proof}
-\citeme{Is there a Kudo--Araki citation for this?}
 As before, let $\G$ denote the formal group associated to $+_\phi$ and let $g\co \A^1 \to G$ denote the induced $p$--typical coordinate.  Any auxiliary function $h\co \A^1 \to \G$ can be expressed in the form \[h = \sum_{m = 0}^\infty {}_{\G} V_m \theta_{a_m} g.\]  We will show that if $h$ is $p$--typical (i.e., $F_\ell h = 0$ for $p \nmid \ell$) then $a_m = 0$ for every $m \ne p^d$.\footnote{The converse so this claim also holds: since $F_\ell F_p = F_p F_\ell$ for $p \nmid \ell$, we can commute $F_\ell$ through the sum expression (which is absent any non-commuting terms by hypothesis), where it then kills $g$ to give $F_\ell h = 0$.}  Suppose instead that we can find a smallest index $m = rp^d$ with $p \nmid r$, $r \ne 1$, and $a_m \ne 0$.  We can then write
 \begin{align*}
 F_\ell \left( h -_{\G} \sum_{j=0}^{d} {}_{\G} V_{p^j} \theta_{a_{p^j}} g \right) & = F_\ell(V_m \theta_{a_m} g + \cdots) \\
@@ -591,17 +603,15 @@ X_0 \arrow["f"]{r} & \mathbb A^1.
 \end{center}
 (In terms of Hopf algebroids, the corresponding element $a \in A$ satisfies $\eta_L(a) = \eta_R(a)$.)  Correspondingly, a closed subscheme $A \subseteq X_0$ determined by the simultaneous vanishing of functions $f_\alpha$ is said to be \textit{invariant} when the vanishing condition is invariant---i.e., a point lies in the simultaneous vanishing locus if and only if its entire orbit under $X_1$ also lies in the simultaneous vanishing locus.  (In terms of Hopf algebroids, the corresponding ideal $I \subseteq A$ satisfies $\eta_L(I) = \eta_R(I)$.)  Finally, a \textit{closed substack} is a substack determined by an invariant ideal of $X_0$.
 \todo{At some point you really should talk about open complements (of affine schemes and then of affinely presented stacks).}
-\todo{The geometric definition of invariant ideal is carelessly phrased.}
 \end{definition}
 
 We are in a good position to discern all of the closed substacks of $\moduli{fg} \times \Spec \Z_{(p)}$---or, equivalently, to discern all of the invariant ideals of $\sheaf O_{\moduli{fgl}^{\ptyp}}$.
-\todo{You could be more careful about stating this: these functions $v_d$ aren't really invariant modulo $I_d$, since they transform through a character of $\G_m \subseteq \moduli{ps}^{\gpd}$.}
 
 \begin{corollary}[{\cite[Theorem 4.6 and Lemmas 4.7-8]{Wilson}}]\label{IdIsAnInvariantIdeal}
-The ideal $I_d = (p, v_1, \ldots, v_{d-1})$ is invariant for all $d$.  It determines the closed substack $\moduli{fg}^{\ge d}$ of formal group laws of $p$--height at least $d$.
+The ideal $I_d = (p, v_1, \ldots, v_{d-1})$ is invariant under the action of \emph{strict} formal group law isomorphisms for all $d$.  It determines the closed substack $\moduli{fg}^{\ge d}$ of formal group laws of $p$--height at least $d$.
 \end{corollary}
 \begin{proof}
-%\todo{\textit{Put a dictionary entry here defining the submoduli of height $\ge d$ formal group laws.}}
+\todo{\textit{Put a dictionary entry here defining the submoduli of height $\ge d$ formal group laws.}}
 Recall from \Cref{KudoArakiIsomorphism} the Kudo--Araki isomorphism \[\moduli{fgl}^{\ptyp} \xrightarrow{\simeq} \Spec \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots] =: \Spec V,\] and let $+_L$ denote the associated universal $p$--typical formal group law with $p$--series \[[p]_L(x) = px +_L v_1 x^p +_L v_2 x^{p^2} +_L \cdots +_L v_d x^{p^d} +_L \cdots.\]  Over $\Spec V[t_1, t_2, \ldots]$, we can form a second group law $+_R$ by conjugating $+_L$ by the universal $p$--typical coordinate transformation $g(x) = \sum_{j=0}^\infty {}_L t_j x^{p^j}$.  The corresponding $p$--series \[[p]_R(x) = \sum_{d=0}^\infty {}_R \eta_R(v_d) x^{p^d}\] determines the $\eta_R$ map of the Hopf algebroid $(V, V[t_1, t_2, \ldots])$ presenting the moduli of $p$--typical formal group laws and $p$--typical isomorphisms.  We cannot hope to compute $\eta_R(v_d)$ explicitly, but modulo $p$ we can apply Freshman's Dream to the expansion of \[[p]_L(g(x)) = g([p]_R(x))\] to discern some information: \[\sum_{\substack{i \ge 0 \\ j > 0}}{}_L t_i \eta_R(v_j)^{p^i} \equiv \sum_{\substack{i > 0 \\ j \ge 0}}{}_L v_i t_j^{p^i} \pmod p.\]  This is still inexplicit, since $+_L$ is a very complicated operation, but we can see $\eta_R(v_d) \equiv v_d \pmod{I_d}$.  It follows that $I_d$ is invariant for each $d$.  Additionally, the closed substack this determines are those formal groups admitting local $p$--typical coordinates for which $v_{\le d} = 0$, guaranteeing that the height of the associated formal group is at least $d$.
 \end{proof}
 
@@ -635,8 +645,7 @@ The results of this section have several alternative forms in the literature.  F
 \todo{The end of this remark could be beefed up by mentioning some of the stuff around Question 100 in the $E$--theory seminar notes.}
 \end{remark}
 
-\begin{remark}\label{ArtinHasseExponential}
-\todo{Maybe add a reference to the Hazewinkel book section on Artin--Hasse exponentials.}
+\begin{remark}[{\cite[Section 17.5]{Hazewinkel}}]\label{ArtinHasseExponential}
 The $p$--typification operation often gives ``unusual'' results.  For instance, we will examine the standard multiplicative formal group law of \Cref{GmAndItsLogExample}, its rational logarithm, and its rational exponential:
 \begin{align*}
 x +_{\G_m^{\mathrm{std}}} y & = x + y - xy, &
@@ -668,12 +677,13 @@ In the previous two Lectures, we analyzed the structure of $\moduli{fg}$ as a wh
 Let $\bar k$ be an algebraically closed field of positive characteristic $p$.  The height map \[\height\co \pi_0 \moduli{fg}(\bar k) \to \N_{> 0} \cup \{\infty\}\] is a bijection.
 \end{theorem}
 \begin{proof}
-Surjectivity follows from \Cref{EveryPSeriesArises}.  Namely, the \textit{$d${\th} Honda formal group law} is the $p$--typical formal group law over $k$ determined by \[[p]_{\phi_d}(x) = x^{p^d},\] and it gives a preimage for $d$.  To show injectivity, we must show that every $p$--typical formal group law $\phi$ over $\bar k$ is isomorphic to the appropriate Honda group law.  Suppose that the $p$--series for $\phi$ begins \[[p]_\phi(x) = x^{p^d} + a x^{p^{d+k}} + \cdots. \]  Then, we will construct a coordinate transformation\todo{This transformation needs to be $p$--typical.} $g(x) = \sum_{j=1}^\infty b_j x^j$ satisfying
+Surjectivity follows from \Cref{EveryPSeriesArises}.  Namely, the \textit{$d${\th} Honda formal group law} is the $p$--typical formal group law over $k$ determined by \[[p]_{\phi_d}(x) = x^{p^d},\] and it gives a preimage for $d$.  To show injectivity, we must show that every $p$--typical formal group law $\phi$ over $\bar k$ is isomorphic to the appropriate Honda group law.  Suppose that the $p$--series for $\phi$ begins \[[p]_\phi(x) = x^{p^d} +_\phi a x^{p^{d+k}} + \cdots.\]  Then, we will construct a coordinate transformation $g(x) = \sum_{j=0}^\infty{}_\phi b_j x^{p^j}$ satisfying
 \begin{align*}
 g(x^{p^d}) & \equiv [p]_\phi(g(x)) & \pmod{x^{p^{d+k} + 1}} \\
-\sum_{j=1}^\infty b_j x^{jp^d} & \equiv \sum_{j=1}^\infty b_j^{p^d} x^{jp^d} + \sum_{j=1}^\infty a b_j^{p^{d+k}} x^{jp^{d+k}} & \pmod{x^{p^{d+k} + 1}}.
+\sum_{j=0}^\infty {}_\phi b_j x^{p^{d+j}} & \equiv \left( \sum_{j=0}^\infty {}_\phi b_j x^{p^j} \right)^{p^d} +_\phi a \left( \sum_{j=0}^\infty {}_\phi b_j x^{p^j} \right)^{p^{d+k}} & \pmod{x^{p^{d+k} + 1}} \\
+\sum_{j=0}^\infty {}_\phi b_j x^{p^{d+j}} & \equiv \left( \sum_{j=0}^\infty {}_{(\operatorname{Frob}^d)^* \phi} b_j^{p^d} x^{p^{d+j}} \right) + a x^{p^{d+k}} & \pmod{x^{p^{d+k} + 1}}.
 \end{align*}
-For $g$ to be a coordinate transformation, we must have $b_1 = 1$, which in the critical degree $x^{p^{d+k}}$ forces the relation \[b_{p^k} = b_{p^k}^{p^d} + a.\]  Since $\bar k$ is algebraically closed, this relation is solvable, and thus the coordinate for $\phi$ can be perturbed so that the term $x^{p^{d+k}}$ does not appear in the $p$--series.  Inducting on $d$ gives the result.
+For $g$ to be a coordinate transformation, we must have $b_0 = 1$, and because $\bar k$ is algebraically closed we can induct on $j$ to solve for the other coefficients in the series.  The coordinate for $\phi$ can thus be perturbed so that the term $x^{p^{d+k}}$ does not appear in the $p$--series, and inducting on $d$ gives the result.
 \end{proof}
 
 \begin{remark}[{\cite[Remark 11.2]{StricklandFGNotes}}]
