fix some todos in Ch 3

--- a/finite.tex
+++ b/finite.tex
@@ -945,8 +945,7 @@ We then turn to the first collection of conditions.  They are \emph{always} sati
 \end{proof}
 
 \begin{definition}\label{DefnChromaticHomologyThys}
-Coupling \Cref{LEFTRealTheoremWithProof} to our understanding of $\moduli{fg}$, we produce many interesting homology theories, collectively referred to as \textit{chromatic homology theories}:
-\todo{The word ``chromatic'' here deserves a footnote explaining its provenance.}
+Coupling \Cref{LEFTRealTheoremWithProof} to our understanding of $\moduli{fg}$, we produce many interesting homology theories, collectively referred to as \textit{chromatic\footnote{The elements of \Cref{ANSS2Figure} and \Cref{ANSS3Figure} are related to each other by ``$v_d$--multiplication'' (cf.\ \Cref{GreekLetterElements}), and families of such elements can be selected for by inverting $v_d$, i.e., by passing to the open substack $\moduli{fg}^{\le d}$.  The word ``chromatic'' here thus refers to an analogy: this localization selects certain periodic families of elements, like a bandpass filter selects certain frequencies out of a complicated radio signal.} homology theories}:
 \begin{itemize}
 \item Recall that the moduli of $p$--typical group laws is affine, presented in \Cref{KudoArakiIsomorphism} by \[\sheaf O_{\moduli{fgl}^{\ptyp}} \cong \Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots].\]  Since the inclusion of $p$--typical group laws into all group laws induces an equivalence of stacks, it is in particular flat, and hence this formula determines a homology theory on finite spectra, called \textit{Brown--Peterson homology}: \[BPP_0(X) := MUP_0(X) \otimes_{MUP_0} BPP_0.\]
 \item A chart for the open substack $\moduli{fg}^{\le d}$ in terms of $\moduli{fgl}^{\ptyp}$ was given in \Cref{OpenSubstacksOfMfg} by $\Spec \Z_{(p)}[v_1, v_2, \ldots, v_d^\pm]$.  Since open maps are in particular flat, it follows that there is a homology theory $E(d)P$, called \textit{the $d${\th} Johnson--Wilson homology}, defined on all spectra by \[E(d)P_0(X) := MUP_0(X) \otimes_{MUP_0} \Z_{(p)}[v_1, v_2, \ldots, v_d^\pm].\]
@@ -978,19 +977,18 @@ E(1)P & \cong KU_{(p)}.
 \end{example}
 
 \begin{remark}[{\cite[Section 5.2]{KLW}, \cite[Corollaries 2.14 and 2.16]{RavenelLocalizationWRTPeriodic}, \cite[Theorem 2.13]{StricklandProductsOnModules}}]\label{MoravaKIsNotCommutative}
-\todo{He, in turn, cites Yosimura's \textit{Universal coefficient sequences for cohomology theories of CW-spectra}.}
 In general, the quotient of a ring spectrum by a homotopy element does not give another ring spectrum.  The most typical example of this phenomenon is that $\S/2$ is not a ring spectrum, since its homotopy is not $2$--torsion.  Most of our constructions above do not suffer from this deficiency, with one exception: Morava $K$--theories at $p = 2$ are not commutative.  Instead, there is a derivation $Q_d: K(d) \to \Susp K(d)$ which tracks the commutativity by the relation \[ab - ba = u Q_d(a) Q_d(b).\]  In particular, we find that $K(d)^* X$ is a commutative ring whenever $K(d)^1 X = 0$, which is often the case.
 \end{remark}
 
 Having constructed these chromatic homology theories, for the rest of this Lecture we pursue an example of a ``fiberwise'' analysis of a phenomenon in homotopy theory.  First, recall the following classical theorem:
 
-\begin{theorem}[Nishida]\citeme{Nishida}
+\begin{theorem}[{\cite{Nishida}, \cite[Section II.2]{BMMS}}]
 Every homotopy class $\alpha \in \pi_{\ge 1} \S$ is nilpotent. \qed
 \end{theorem}
 
 \noindent People studying $K$--theory in the '$70$s discovered the following related phenomenon:
 
-\begin{theorem}[Adams]\label{AdamsSelfMapThm}\citeme{Adams}
+\begin{theorem}[{\cite[Theorem 12.1]{AdamsJXIV}}]\label{AdamsSelfMapThm}
 Let $M_{2n}(p)$ denote the mod--$p$ Moore spectrum with bottom cell in degree $2n$.  Then there is an index $n$ and a map $v: M_{2n}(p) \to M_0(p)$ such that $KU_* v$ acts by multiplication by the $n$\textsuperscript{th}\, power of the Bott class.  The minimal such $n$ is given by the formula \[n = \begin{cases} p-1 & \text{when $p \ge 3$}, \\ 4 & \text{when $p = 2$}. \qed \end{cases}\]
 \end{theorem}
 
@@ -1314,7 +1312,7 @@ Take $k$ to be a perfect field of positive characteristic $p$, and take $\Gamma$
 & M_0(p).
 \end{tikzcd}
 \end{center}
-At odd primes, this turns out to be the $v_1$--self-map $v\co M_{2(p-1)}(p) \to M_0(p)$ announced in \Cref{AdamsSelfMapThm}.
+At odd primes, this turns out to be the $v_1$--self-map $v\co M_{2(p-1)}(p) \to M_0(p)$ announced in \Cref{AdamsSelfMapThm} (cf.\ also \cite[Proposition 12.7]{AdamsJXIV}).
 
 More generally, different powers $v_1^j$ of the section $v_1$ also give rise to homotopy elements $\alpha_{j/1} \in \pi_{2(p-1)j} M_0(p)$.  These have varying orders of divisibility, and we write $\alpha_{j/k}$ for the element satisfying $p^{k-1} \alpha_{j/k} = \alpha_{j/1}$.  Compositionally, these maps satisfy the useful relation $\alpha_{p^{j-1}/j-1}^p = \alpha_{p^j/j}$.
 \todo{Is this relation right?}
