--- a/main.bib
+++ b/main.bib
@@ -1455,6 +1455,23 @@ MRREVIEWER = {Paul G. Goerss},
        URL = {http://dx.doi.org/10.4007/annals.2010.171.491},
 }
 
+@article {Nishida,
+    AUTHOR = {Nishida, Goro},
+     TITLE = {The nilpotency of elements of the stable homotopy groups of
+              spheres},
+   JOURNAL = {J. Math. Soc. Japan},
+  FJOURNAL = {Journal of the Mathematical Society of Japan},
+    VOLUME = {25},
+      YEAR = {1973},
+     PAGES = {707--732},
+      ISSN = {0025-5645},
+   MRCLASS = {55E45},
+  MRNUMBER = {0341485},
+MRREVIEWER = {J. F. Adams},
+       DOI = {10.2969/jmsj/02540707},
+       URL = {http://dx.doi.org/10.2969/jmsj/02540707},
+}
+
 @article {Ochanine,
     AUTHOR = {Ochanine, Serge},
      TITLE = {Sur les genres multiplicatifs d\'efinis par des int\'egrales
