--- a/main.tex
+++ b/main.tex
@@ -56,36 +56,37 @@
 \todo[inline]{Clark's use of MinionPro font is really nice (cf. \texttt{https://dl.dropboxusercontent.com/u/1741495/teaching/2017spring.18.917/gamma-blurb.pdf}).  Generally, we should make an effort to pick a nice font.  http://web.willbenton.com/writing/2008/better-latex has more info about converting FF fonts for use in LaTeX, including Minion.}
 \todo[inline]{Use booktabs (http://www.ctan.org/tex-archive/macros/latex/contrib/booktabs/) to typeset any tables appearing in this book.  (I don't think there are very many.)}
 \todo[inline]{In several places you abuse the \texttt{align*} environment to put references into a right-hand column.  Is there a less hack-y way to do this?}
+\todo[inline]{Be consistent about hyphens / en-dashes connecting ``$A$/$E$/$H_\infty$'' to ``ring''.}
 
 
 
 
 \mainmatter
 
-\include{intro}
+% \include{intro}
 
-\include{conventions}
+% \include{conventions}
 
 
 \renewcommand\chaptername{Case Study}
 \renewcommand\cftchappresnum{{Case Study}\space}
 \setlength{\cftchapnumwidth}{\widthof{\textbf{Case study~999~}}}
 
-\include{mo}
+% \include{mo}
 
 \include{quillen}
 
-\include{finite}
+% \include{finite}
 
-\include{cooperations}
+% \include{cooperations}
 
-\include{sigma}
+% \include{sigma}
 
-\include{hinfty}
+% \include{hinfty}
 
 
-\appendix
-\include{unknowns}
+% \appendix
+% \include{unknowns}
 
 
 
