fixing displaymode tombstones, \todo gobbling spaces, and a few small typos

--- a/main.bib
+++ b/main.bib
@@ -86,7 +86,7 @@ MRREVIEWER = {P. S. Landweber},
 }
 
 @ARTICLE{AHR,
-  author = {Ando, Matthew, and Hopkins, Michael J. and Rezk, Charles},
+  author = {Ando, Matthew and Hopkins, Michael J. and Rezk, Charles},
   title = {Multiplicative orientations of $KO$--theory and the spectrum of topological modular forms},
   note = {\url{http://www.math.illinois.edu/~mando/papers/koandtmf.pdf}, Accessed: 2016-11-16}
 }
@@ -1644,13 +1644,13 @@ MRREVIEWER = {David C. Johnson},
 
 @ARTICLE{RezkFelixKlein,
   author = {Rezk, Charles},
-  title = {Elliptic Cohomology and Elliptic Curves (Felix Klein lectures, Bonn 2015)},
+  title = {Elliptic Cohomology and Elliptic Curves ({F}elix {K}lein lectures, Bonn 2015)},
   note = {\url{http://www.math.uiuc.edu/~rezk/felix-klein-lectures-notes.pdf}, Accessed: 2016-10-07}
 }
 
 @ARTICLE{RezkNotesOnHMThm,
   author = {Rezk, Charles},
-  title = {Notes on the Hopkins--Miller Theorem},
+  title = {Notes on the {H}opkins--{M}iller Theorem},
   note = {\url{www.math.uiuc.edu/~rezk/hopkins-miller-thm.pdf}, Accessed: 2016-10-07}
 }
 
