--- a/mo.tex
+++ b/mo.tex
@@ -176,7 +176,12 @@ An \textit{affine $\F_2$--scheme} is a functor $X: \CatOf{Algebras}_{\F_2/} \to 
 \end{definition}
 
 \begin{lemma}
-There is an equivalence of categories \[\Spec: \CatOf{Algebras}_{\F_2/}^{\mathrm{op}} \to \CatOf{AffineSchemes}_{/\F_2}. \qed\]
+There is an equivalence of categories
+\[
+\pushQED{\qed}
+\Spec: \CatOf{Algebras}_{\F_2/}^{\mathrm{op}} \to \CatOf{AffineSchemes}_{/\F_2}.\qedhere
+\popQED
+\]
 \end{lemma}
 
 The centerpiece of thinking about rings in this way, for us and for now, is to translate between a presentation of $R$ as a quotient of a free algebra and a presentation of $(\Spec R)(T)$ as selecting tuples of elements in $T$ subject to certain conditions.  Consider the following example:
@@ -490,7 +495,12 @@ We can now see what trading maps for cofiber sequences has bought us: mod--$2$ h
 \todo{Can this be phrased so as to indicate how this works for longer extensions? I've never tried to think about even what happens for $C(4)$.}
 The Adams spectral sequence bundles this thought process into a single machine:
 \begin{theorem}[{\cite[Definition 2.1.8, Lemma 2.1.16]{RavenelGreenBook}, \cite[Chapter 18]{MosherTangora}}]
-There is a convergent spectral sequence of signature \[\Ext_{\mathcal A_*}^{*, *}(\F_2, \F_2) \Rightarrow (\pi_* \S^0)^\wedge_2. \qed\]
+There is a convergent spectral sequence of signature
+\[
+\pushQED{\qed}
+\Ext_{\mathcal A_*}^{*, *}(\F_2, \F_2) \Rightarrow (\pi_* \S^0)^\wedge_2.\qedhere
+\popQED
+\]
 \end{theorem}
 In effect, this asserts that the above process is \emph{exhaustive}: every element of $(\pi_* \S^0)^\wedge_2$ can be detected and distinguished by some representative class of extensions of comodules for the dual Steenrod algebra.  Mildly more generally, if $X$ is a bounded-below spectrum, then there is even a spectral sequence of signature \[\Ext_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} X) \Rightarrow \pi_* X^\wedge_2.\]
 
@@ -584,7 +594,11 @@ In \Cref{StableContextLecture} (and \Cref{FHGivesComodules} specifically), we wi
 As an example application, cotensoring gives rise to a concise description of what it means to be a comodule map:
 
 \begin{lemma}[{\cite[Lemma A1.1.6b]{RavenelGreenBook}}]
-Let $M$ and $N$ be $A$--comodules with $M$ projective as a $k$--module.  Then there is an equivalence \[\CatOf{Comodules}_A(M, N) = \CatOf{Modules}_k(M, k) \cotensor_A N. \qed\]
+Let $M$ and $N$ be $A$--comodules with $M$ projective as a $k$--module.  Then there is an equivalence
+\[\pushQED{\qed}
+\CatOf{Comodules}_A(M, N) = \CatOf{Modules}_k(M, k) \cotensor_A N.\qedhere
+\popQED
+\]
 \end{lemma}
 
 \noindent From this, we can deduce a connection between the push--pull flavor of comodule cohomology described above and the input to the Adams spectral sequence.
@@ -779,7 +793,7 @@ This is pretty remarkable: some statement about manifold geometry came down to u
 $MO$ splits as a wedge of shifts of $H\F_2$.
 \end{lemma}
 \begin{proof}
-Referring to \Cref{HurewiczImageOnZeroLine}, we find that the Hurewicz map induces a $\pi_*$--injection $MO \to H\F_2 \sm MO$.  Pick an $\F_2$--basis $\{v_\alpha\}_\alpha$ for $\pi_* MO$ and extend it to a $\F_2$--basis $\{v_\alpha\}_\alpha \cup \{w_\beta\}_\beta$ for $\pi_* H\F_2 \sm MO$.  Altogether, this larger basis can be represented as a single map \[\bigvee_\alpha \Susp^{|v_\alpha|} \S \vee \bigvee_\beta \Susp^{|w_\beta|} \S \xrightarrow{\bigvee_\alpha v_\alpha \vee \bigvee_\beta w_\beta} H\F_2 \sm MO.\]  Smashing through with $H\F_2$ gives an equivalence \[\bigvee_\alpha \Susp^{|v_\alpha|} H\F_2 \vee \bigvee_\beta \Susp^{|w_\beta|} H\F_2 \xrightarrow\simeq H\F_2 \sm MO.\]  The composite map \[MO \to H\F_2 \sm MO \xleftarrow\simeq \bigvee_\alpha \Susp^{|v_\alpha|} H\F_2 \vee \bigvee_\beta \Susp^{|w_\beta|} H\F_2 \to \bigvee_\alpha \Susp^{|v_\alpha|} H\F_2\] is a weak equivalence.
+Referring to \Cref{HurewiczImageOnZeroLine}, we find that the Hurewicz map induces a $\pi_*$--injection $MO \to H\F_2 \sm MO$.  Pick an $\F_2$--basis $\{v_\alpha\}_\alpha$ for $\pi_* MO$ and extend it to an $\F_2$--basis $\{v_\alpha\}_\alpha \cup \{w_\beta\}_\beta$ for $\pi_* H\F_2 \sm MO$.  Altogether, this larger basis can be represented as a single map \[\bigvee_\alpha \Susp^{|v_\alpha|} \S \vee \bigvee_\beta \Susp^{|w_\beta|} \S \xrightarrow{\bigvee_\alpha v_\alpha \vee \bigvee_\beta w_\beta} H\F_2 \sm MO.\]  Smashing through with $H\F_2$ gives an equivalence \[\bigvee_\alpha \Susp^{|v_\alpha|} H\F_2 \vee \bigvee_\beta \Susp^{|w_\beta|} H\F_2 \xrightarrow\simeq H\F_2 \sm MO.\]  The composite map \[MO \to H\F_2 \sm MO \xleftarrow\simeq \bigvee_\alpha \Susp^{|v_\alpha|} H\F_2 \vee \bigvee_\beta \Susp^{|w_\beta|} H\F_2 \to \bigvee_\alpha \Susp^{|v_\alpha|} H\F_2\] is a weak equivalence.
 \end{proof}
 
 \begin{remark}
