--- a/cooperations.tex
+++ b/cooperations.tex
@@ -105,7 +105,11 @@ The proof is a matter of elucidating the last condition.  For $X$ satisfying thi
 \end{proof}
 
 \begin{theorem}[{\cite[Theorem 6.17]{BCM}}]
-$\pi_* \sheaf{UD}_E(\Susp^k X)$ is the bar resolution for the free Hopf module comonad, and the $E_2$--page of the unstable descent spectral sequence is presented as\todo{To be clear about this ground category: the functor $G(M) = R_* \Loops^\infty R[M]$ determines a comonad on the category of free $R_*$--modules, and we refer to coalgebras for this comonad.} \[E_2^{s, t} = L^s\CatOf{Coalgebras}_G(E_* S^t, E_* X). \qed\]
+$\pi_* \sheaf{UD}_E(\Susp^k X)$ is the bar resolution for the free Hopf module comonad, and the $E_2$--page of the unstable descent spectral sequence is presented as\todo{To be clear about this ground category: the functor $G(M) = R_* \Loops^\infty R[M]$ determines a comonad on the category of free $R_*$--modules, and we refer to coalgebras for this comonad.}
+\[\pushQED{\qed}
+E_2^{s, t} = L^s\CatOf{Coalgebras}_G(E_* S^t, E_* X). \qedhere
+\popQED
+\]
 \end{theorem}
 
 At this point, it is instructive to work through an example to understand the kinds of objects we have constructed.  At first appraisal, these objects appear to be so bottomlessly complicated that it must be a hopeless enterprise to actually compute even just the enriched Hopf ring associated to a spectrum $E$.  In fact, the abundance of structure maps involved gives enough footholds that this is actually often feasible, provided we have sufficiently strong stomachs.  Our example will be $E = H\F_2$, and the place to start is with a very old lemma:
@@ -117,12 +121,22 @@ If $E$ is a spectrum with $\pi_{-1} E = 0$, then $\OS{E}{1} \simeq B\OS{E}{0}$. 
 Let $G$ be a topological group.  There is a convergent spectral sequence of algebras of signature \[E^1_{*, j} = F_*(\Susp G)^{\sm j} \Rightarrow F_* BG.\]  In the case that $F$ has K\"unneth isomorphisms $\widetilde F_*((\Susp G)^{\sm j}) \cong \widetilde F_*(\Susp G)^{\otimes_{F_*} j}$, the $E^2$--page is identifiable as \[E^2_{*, *} \cong \Tor^{F_* G}_{*, *}(F_*, F_*)\] and the spectral sequence is one of Hopf algebras. \qed
 \end{lemma}
 \begin{corollary}
-If $E$ is a connective spectrum and $F$ has K\"unneth isomorphisms $\widetilde F_*(\OS{E}{j} \sm \OS{E}{j}) \cong \widetilde F_* \OS{E}{j} \otimes_{F_*} \widetilde F_* \OS{E}{j}$ for all $j$, then there is a family of spectral sequences of Hopf algebras with signatures \[E^2_{*, *} \cong \Tor^{F_* \OS{E}{j}}_{*, *}(F_*, F_*) \Rightarrow F_* \OS{E}{j+1}. \qed\]
+If $E$ is a connective spectrum and $F$ has K\"unneth isomorphisms $\widetilde F_*(\OS{E}{j} \sm \OS{E}{j}) \cong \widetilde F_* \OS{E}{j} \otimes_{F_*} \widetilde F_* \OS{E}{j}$ for all $j$, then there is a family of spectral sequences of Hopf algebras with signatures
+\[
+\pushQED{\qed}
+E^2_{*, *} \cong \Tor^{F_* \OS{E}{j}}_{*, *}(F_*, F_*) \Rightarrow F_* \OS{E}{j+1}. \qedhere
+\popQED
+\]
 \end{corollary}
 
 That this spectral sequence is multiplicative for the $\ast$--product is useful enough, but the situation is actually much, much better than this:
 \begin{lemma}[{\cite[Equation 1.3]{ThomasonWilson}, \cite[Theorem 2.2]{RavenelWilsonKthyOfEMSpaces}}]\label{CircProductAndDifferentials}
-Denote by $E^r_{*, *}(F_* \OS{E}{j})$ the spectral sequence considered above whose $E^2$--term is constructed from $\Tor$ over $F_* \OS{E}{j}$.  There are maps \[E^r_{*, *}(F_* \OS{E}{j}) \otimes_{F_*} F_* \OS{E}{m} \to E^r_{*, *}(F_* \OS{E}{j+m})\] which agree with the map \[F_* \OS{E}{j+1} \otimes_{F_*} F_* \OS{E}{m} \xrightarrow{\circ} F_* \OS{E}{j+m+1}\] on the $E^\infty$--page and which satisfy \[d^r(x \circ y) = (d^r x) \circ y. \qed\]
+Denote by $E^r_{*, *}(F_* \OS{E}{j})$ the spectral sequence considered above whose $E^2$--term is constructed from $\Tor$ over $F_* \OS{E}{j}$.  There are maps \[E^r_{*, *}(F_* \OS{E}{j}) \otimes_{F_*} F_* \OS{E}{m} \to E^r_{*, *}(F_* \OS{E}{j+m})\] which agree with the map \[F_* \OS{E}{j+1} \otimes_{F_*} F_* \OS{E}{m} \xrightarrow{\circ} F_* \OS{E}{j+m+1}\] on the $E^\infty$--page and which satisfy
+\[
+\pushQED{\qed}
+d^r(x \circ y) = (d^r x) \circ y. \qedhere
+\popQED
+\]
 \end{lemma}
 \noindent This Lemma is obscenely useful: it means that differentials can be transported \emph{between spectral sequences} for classes which can be decomposed as $\circ$--products.  This means that the bottom spectral sequence (i.e., the case $j = 0$) exerts a large amount of control over the others---and this spectral sequence often turns out to be very computable.
 
@@ -428,7 +442,10 @@ iR & \xrightarrow{\eps} \Z, & \eps([r]) & = 1, & \eps(1) & = 1, \\
 \end{definition}
 
 \begin{lemma}
-We have $S \cong Q^* i S$, and moreover there is an adjunction \[(\Spec Q^* H)(S) = \CatOf{Rings}(Q^* H, S) = \CatOf{HopfRings}(H, iS) = (\SpH H)(iS). \qed\]
+We have $S \cong Q^* i S$, and moreover there is an adjunction
+\[\pushQED{\qed}
+(\Spec Q^* H)(S) = \CatOf{Rings}(Q^* H, S) = \CatOf{HopfRings}(H, iS) = (\SpH H)(iS). \qedhere
+\popQED\]
 \end{lemma}
 
 \begin{remark}
@@ -495,7 +512,10 @@ The natural homomorphism \[\AA(H, BP) \to H_* \OS{BP}{2*}\] is an isomorphism.  
 Crucially, polynomiality will often let us consider the ring of $\ast$--indecomposables rather than the full Hopf ring.  To begin, recall the following consequence of \Cref{QAstAndTensors}:
 
 \begin{corollary}
-As an algebra under the $\circ$--product, \[Q^* H_*[BP^*] \cong \F_p[[v_n] - [0] \mid n \ge 1]. \qed\]
+As an algebra under the $\circ$--product,
+\[\pushQED{\qed}
+Q^* H_*[BP^*] \cong \F_p[[v_n] - [0] \mid n \ge 1]. \qedhere
+\popQED\]
 \end{corollary}
 
 \noindent From \Cref{UnstableRWRelation}, we now know that $Q^* \AA(H, BP)$ is generated by $[v_n] - [0]$ for $n \ge 1$ and $\beta_j \in H_{2j} \OS{BP}{2}$, $j \ge 0$.  In fact, $p$--typicality shows~\cite[Lemma 4.14]{RavenelWilsonHopfRingForMU} that it suffices to consider $\beta_{p^d} = \beta_{(d)}$ for $i \ge 0$.  Altogether, this gives a secondary comparison map \[A := \F_p[[v_n], \beta_{(d)} \mid n > 0, d \ge 0] \onto Q^* \AA(H, BP).\]  Although this map is onto it is not an isomorphism, as these elements are subject to the following relation:
@@ -739,7 +759,7 @@ In the case that the base ring is $p$--local, $C\G$ splits as a sum of copies of
 
 This construction also plays the role of a Dieudonn\'e functor:
 
-\begin{theorem}{\cite[Theorem 3.5 and Theorem 3.28]{ZinkCartierTheory}}\label{CurveDieudonneTheorem}
+\begin{theorem}[{\cite[Theorem 3.5 and Theorem 3.28]{ZinkCartierTheory}}]\label{CurveDieudonneTheorem}
 The functor $D_*$ determines a \emph{covariant} equivalence of categories between smooth $1$--dimensional formal groups over $k$ of finite $p$--height and Dieudonn\'e modules satisfying the three technical conditions of \Cref{MainContraDieudonneThm}. \qed
 \end{theorem}
 
@@ -767,7 +787,10 @@ We now seek to compare our two Dieudonn\'e functors.  In some sense, the compari
 This can be made rigorous by noting the following basic but ultra-important fact about the Witt scheme:
 \begin{lemma}
 \todo{Sure seems to me like $\widehat{C\W}_p$ is (canonically, even??) isomorphic to $\widehat{\W}_p$.  It would be nice to sort this out.}
-There is a formal group scheme $\widehat{C\W}_p$ with the property \[\CatOf{FormalGroups}(\widehat{\W}_p, \G)^* \cong \CatOf{FormalGroups}(\G, \widehat{C\W}_p). \qed\]
+There is a formal group scheme $\widehat{C\W}_p$ with the property
+\[\pushQED{\qed}
+\CatOf{FormalGroups}(\widehat{\W}_p, \G)^* \cong \CatOf{FormalGroups}(\G, \widehat{C\W}_p). \qedhere
+\popQED\]
 \end{lemma}
 
 \begin{corollary}[{\cite[Section II.15]{MazurMessing}, \cite[Equation 5.5.2]{Katz}}]
@@ -871,13 +894,19 @@ The functor
 D_*\co \CatOf{GradedHopfAlgebras}^{>0, \fin}_{\F_p/} & \to \CatOf{GradedDMods}, \\
 D_*(H) = \bigoplus_n D_n(H) & = \bigoplus_n \CatOf{GradedHopfAlgebras}^{>0, \fin}_{\F_p/}(H(n), H)
 \end{align*}
-is an exact equivalence of categories.  Moreover, $D_* H(n)$ is characterized by the equation \[\CatOf{GradedDMods}(D_* H(n), M) = M_n. \qed\]
+is an exact equivalence of categories.  Moreover, $D_* H(n)$ is characterized by the equation
+\[\pushQED{\qed}
+\CatOf{GradedDMods}(D_* H(n), M) = M_n. \qedhere
+\popQED\]
 \end{theorem}
 
 Having produced our desired graded Dieudonn\'e theory, we now need some topological input.  We are by now well aware that the homology of an $H$--space forms a Hopf algebra, and the Serre spectral sequence for a fibration of $H$--spaces \[F \to E \to B\] takes the form \[E_2^{*, *} = H^* B \otimes H^* F \Rightarrow H^* E.\]  The following result of Goerss--Lannes--Morel says that in the case that the fibration is one of \emph{infinite loopspaces}, we have the exactness property we need:
 
 \begin{theorem}[{\cite[Lemma 2.8]{GLM}}]
-Let $X \to Y \to Z$ be a cofiber sequence of spectra.  Then, provided $n > 1$ satisfies $n \not\equiv \pm 1 \pmod{2p}$, there is an exact sequence \[D_n H_* \Loops^\infty X \to D_n H_* \Loops^\infty Y \to D_n H_* \Loops^\infty Z. \qed\]
+Let $X \to Y \to Z$ be a cofiber sequence of spectra.  Then, provided $n > 1$ satisfies $n \not\equiv \pm 1 \pmod{2p}$, there is an exact sequence
+\[\pushQED{\qed}
+D_n H_* \Loops^\infty X \to D_n H_* \Loops^\infty Y \to D_n H_* \Loops^\infty Z. \qedhere
+\popQED\]
 \end{theorem}
 
 \noindent This Theorem is not especially easy to prove: one works very directly with unstable modules over the Steenrod algebra, the bar spectral sequence, and Postnikov decomposition of infinite loopspaces.  We refer the reader to the paper directly, as we have been unable to find a useful improvement upon or even summary of the results presented there.  Nonetheless, granting this Theorem, we use Brown representability to draw the following consequence:
@@ -932,7 +961,10 @@ We learn immediately that $H_* B(n)$ is finite.  We would like to show, furtherm
 Lastly, for a \emph{space} $X$, we definitionally have that have $H_* X$ forms an unstable module over the Steenrod algebra, i.e., $\Loops^\infty H_* X = H_* X$.  This has the following direct sequence (with minor fuss at the bad indices $n \equiv \pm 1 \pmod p$):
 
 \begin{lemma}[{\cite[Lemma 3.3]{GLM}}]
-For $X$ a space, there is a natural surjection \[B(n)_n X \to H_n X. \qed\]
+For $X$ a space, there is a natural surjection
+\[\pushQED{\qed}
+B(n)_n X \to H_n X. \qedhere
+\popQED\]
 \end{lemma}
 
 
@@ -1075,7 +1107,10 @@ Let $\mathbb G$ be a $p$--divisible group over a perfect field $k$ of positive c
 \end{theorem}
 
 \begin{lemma}[{\cite[Remark 2.2.5]{HopkinsLurie}}]
-If $\mathbb G$ is a connected $p$--divisible group of height $d$ and of dimension $n$ as a formal variety, then \[\operatorname{rank}\left(H^1(\mathbb G[p]; \G_a)\right) = d - n. \qed\]
+If $\mathbb G$ is a connected $p$--divisible group of height $d$ and of dimension $n$ as a formal variety, then
+\[\pushQED{\qed}
+\operatorname{rank}\left(H^1(\mathbb G[p]; \G_a)\right) = d - n. \qedhere
+\popQED\]
 \end{lemma}
 
 \begin{remark}
