whoops! bad main commit

--- a/main.tex
+++ b/main.tex
@@ -63,30 +63,30 @@
 
 \mainmatter
 
-% \include{intro}
+\include{intro}
 
-% \include{conventions}
+\include{conventions}
 
 
 \renewcommand\chaptername{Case Study}
 \renewcommand\cftchappresnum{{Case Study}\space}
 \setlength{\cftchapnumwidth}{\widthof{\textbf{Case study~999~}}}
 
-% \include{mo}
+\include{mo}
 
 \include{quillen}
 
-% \include{finite}
+\include{finite}
 
-% \include{cooperations}
+\include{cooperations}
 
-% \include{sigma}
+\include{sigma}
 
-% \include{hinfty}
+\include{hinfty}
 
 
-% \appendix
-% \include{unknowns}
+\appendix
+\include{unknowns}
 
 
 
